assets/css/frontend-forms.css
/* ... */
body ul.wpuf-form li .wpuf-fields ul.wpuf-attachment-list li .wpuf-file-input-wrap input,
body ul.wpuf-form li .wpuf-fields ul.wpuf-attachment-list li .wpuf-file-input-wrap textarea {
  border: 1px solid #eee;
  width: 93%;
}
body ul.wpuf-form li .wpuf-fields ul.wpuf-attachment-list li .attachment-name {
  text-align: center;
  line-height: 0;
}
body ul.wpuf-form li .wpuf-fields .progress {
  background: -moz-linear-gradient(center bottom, #FFFFFF 0%, #F7F7F7 100%) repeat scroll 0 0 #FFFFFF;
  border: 1px solid #D1D1D1;
  border-radius: 3px 3px 3px 3px;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1) inset;
  float: right;
  height: 22px;
  line-height: 2em;
  margin: 0;
  overflow: hidden;
  padding: 0;
  width: 200px;
}
body ul.wpuf-form li .wpuf-fields .bar {
  background-color: #83B4D8;
  background-image: -moz-linear-gradient(center bottom, #72A7CF 0%, #90C5EE 100%);
  border-radius: 3px 3px 3px 3px;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
  height: 100%;
  width: 0;
  z-index: 9;
}
body ul.wpuf-form li .wpuf-fields .progress .percent {
  color: rgba(0, 0, 0, 0.6);
  padding: 0 8px;
  position: relative;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
  width: 200px;
  z-index: 10;
}
body ul.wpuf-form li .wpuf-fields ul.wpuf-category-checklist {
  list-style: none;
  margin: 0;
  padding: 0;
}
body ul.wpuf-form li .wpuf-fields ul.wpuf-category-checklist li {
  margin-bottom: 5px;
  padding: 0;
}
body ul.wpuf-form li .wpuf-fields ul.wpuf-category-checklist ul.children {
  list-style: none;
  margin-left: 25px;
}
body ul.wpuf-form li .wpuf-fields #wpuf-insert-image-container {
  margin-bottom: 3px;
}
body ul.wpuf-form li .wpuf-fields #wpuf-insert-image-container:after {
  clear: both;
  content: "";
  display: table;
}
body ul.wpuf-form li .wpuf-fields #wpuf-insert-image-container a.wpuf-insert-image {
  text-decoration: none;
  border: 1px solid #DFDFDF;
  font-size: 11px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  padding: 4px 6px;
  margin-right: 10px;
}
body ul.wpuf-form li .wpuf-fields #wpuf-insert-image-container a.wpuf-insert-image .wpuf-media-icon {
  height: 12px;
  width: 12px;
}
body ul.wpuf-form li .wpuf-fields .wpuf-fields-list {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  list-style: none;
}
body ul.wpuf-form li .wpuf-fields .wpuf-fields-list li {
  padding: 0;
  margin: 0 0 6px;
}
body ul.wpuf-form li .wpuf-fields .wpuf-fields-list.wpuf-list-inline {
  margin-left: -5px;
}
body ul.wpuf-form li .wpuf-fields .wpuf-fields-list.wpuf-list-inline li {
  display: inline-block;
  padding-left: 5px;
  padding-right: 5px;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field {
  border-collapse: collapse;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field * {
  box-sizing: border-box;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field input {
  width: 100%;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field .wpuf-repeater-buttons {
  width: 75px;
  padding-left: 12px;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field .wpuf-repeater-buttons img {
  width: 100%;
  height: auto;
}
body ul.wpuf-form li .wpuf-fields table.wpuf-repeatable-field .wpuf-repeater-buttons i {
  display: inline-block;
  width: 15px;
  height: 15px;
  margin: 2px 4px 0 0;
}
body ul.wpuf-form li label.wpuf-form-sub-label {
  font-size: 12px;
  display: inline-block;
  padding-top: 5px;
}
body ul.wpuf-form li .wpuf-address-field {
  width: 100%;
  margin-bottom: 10px;
}
body ul.wpuf-form li .wpuf-address-field:after {
  clear: both;
  content: "";
  display: table;
}
body ul.wpuf-form li .wpuf-address-field.city_name,
body ul.wpuf-form li .wpuf-address-field.state,
body ul.wpuf-form li .wpuf-address-field.zip,
body ul.wpuf-form li .wpuf-address-field.country_select {
  float: left;
  width: 47%;
}
body ul.wpuf-form li .wpuf-address-field.city_name,
body ul.wpuf-form li .wpuf-address-field.zip {
  margin-right: 4%;
}
body ul.wpuf-form li .wpuf-address-field.zip {
  clear: both;
}
body ul.wpuf-form li .wpuf-section-wrap {
  border-bottom: 1px solid #ccc;
  margin: 15px 0;
}
body ul.wpuf-form li .wpuf-section-wrap h2.wpuf-section-title {
  margin: 0;
}
body ul.wpuf-form li .wpuf-section-wrap .wpuf-section-details {
  padding: 4px 0 8px;
  font-size: 12px;
}
body ul.wpuf-form.form-label-above li .wpuf-label,
body ul.wpuf-form.form-label-above li .wpuf-fields {
  display: block;
  float: none;
  width: 100%;
}
body ul.wpuf-form.form-label-above li.field-size-large .wpuf-fields {
  display: block;
  float: none;
  width: 100%;
}
body ul.wpuf-form.form-label-above li.field-size-medium .wpuf-fields {
  display: block;
  float: none;
  width: 65%;
}
body ul.wpuf-form.form-label-above li.field-size-small .wpuf-fields {
  display: block;
  float: none;
  width: 30%;
}
body ul.wpuf-form.form-label-above li .wpuf-label {
  margin-bottom: 10px;
}
body ul.wpuf-form.form-label-right li .wpuf-label {
  float: right;
}
body ul.wpuf-form.form-label-hidden li .wpuf-label {
  display: none;
}
body ul.wpuf-form.form-label-hidden li.field-size-large .wpuf-fields {
  display: block;
  float: none;
  width: 100%;
}
body ul.wpuf-form.form-label-hidden li.field-size-medium .wpuf-fields {
  display: block;
  float: none;
  width: 65%;
}
body ul.wpuf-form.form-label-hidden li.field-size-small .wpuf-fields {
  display: block;
  float: none;
  width: 30%;
}
body ul.wpuf-form.form-label-hidden li .wpuf-fields {
  display: block;
  float: none;
  width: 100%;
}
body ul.wpuf-form .wpuf-submit .button-primary-disabled {
  color: #94cde7 !important;
  background: #298cba !important;
  border-color: #1b607f !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1) !important;
  cursor: default;
}
/* ... */

